found another bug that some elements on page not clickable anymore, figured it out by changing z-index and position

--- a/style.css
+++ b/style.css
@@ -17,14 +17,33 @@ html {
   scroll-behavior:smooth;
 }
 
+/*********/
+#desktop-nav a {
+  position:relative;
+}
+
+.contact-info-upper-container a {
+  position:relative;
+}
+
+.nav-links-container a {
+  position:relative;
+}
+
+#social-container .icon {
+  position:relative;
+}
+
 #particles-js {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  /* z-index: -1;  */
+  z-index: 0; 
 }
+
+/*************/
 
 p {
   color:rgb(85,85,85);
@@ -34,6 +53,7 @@ p {
 /* TRANSITION */
 a, .btn {
   transition: all 300ms ease;
+  /* z-index: 1;  */
 }
 
 /* DESKTOP NAV */
